# sr

./: pyproject.toml
data/: test.m4a
src/: hf_backup.py  huggingface.py  listener.py  pydub_silence.py  sentiment.py  silence_remover.py  sphinx_recognizer.py  streamer.py
